# port-authority

./: .gitignore  Cargo.toml  LICENSE  README.md  port-broker-spec.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: error.rs  lib.rs  types.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: broker.rs  config.rs  db.rs  grpc.rs  lease.rs  main.rs  tunnel.rs
docs/plans/: 2026-03-22-fix-unique-constraint-port-reuse-plan.md  2026-03-23-feat-sveltekit-port-management-ui-plan.md  2026-03-23-feat-vm-to-host-port-negotiation-plan.md  NEXT_SPRINT.md
migrations/: 20240101000000_initial.sql  20260323000000_partial_unique_index.sql
proto/: portd.proto
ui/: .gitignore  package-lock.json  package.json  proto-gen.sh  svelte.config.js
ui/src/: app.css  app.html  hooks.server.ts
ui/src/lib/mappers/: reservation.ts
ui/src/lib/server/: grpc.ts  watch-bridge.ts
ui/src/lib/types/: index.ts
ui/src/lib/utils/: errors.ts  format.ts  owner.ts
ui/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
ui/src/routes/api/inspect/[id]/: +server.ts
ui/src/routes/api/reservations/: +server.ts
ui/src/routes/api/watch/: +server.ts
ui/src/routes/reservations/[id]/: +page.server.ts  +page.svelte
ui/src/routes/reserve/: +page.svelte
