[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Host-managed port brokerage for local VM development"

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt", "net", "io-util", "signal", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
clap = { version = "4", features = ["derive"] }
russh = "0.46"
russh-keys = "0.46"
uuid = { version = "1", features = ["v4", "serde"] }
tabled = "0.17"
toml = "0.8"
async-trait = "0.1"
port-authority-core = { path = "crates/core" }
