[package]
name = "port-authority-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
